# grass_touching_captcha

./: .gitignore  CREDITS  README.md  constants.py  jina.py  main.py  ocr_check.py  pyproject.toml  requirements.txt
static/: style.css
templates/: achievements.jinja2  app.jinja2  base.jinja2  home.jinja2  leaderboard.jinja2  login.jinja2  profile.jinja2  register.jinja2  submit_grass_touching.jinja2  unathorized.jinja2
