[project]
name = "grass-touching-captcha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
